[FIX] web: `graphView`, adapt for dark mode
This commit define a new set of colors for dark-mode graph.
It also introduces a new JS function allowing to detect the
color-scheme currently active to use the right colors accordingly.

task-2710677

--- a/addons/web/static/src/webclient/webclient.scss
+++ b/addons/web/static/src/webclient/webclient.scss
@@ -1,4 +1,6 @@
 :root {
+  --o-webclient-color-scheme:#{$o-webclient-color-scheme};
+
   font-size: $o-root-font-size;
 }
 
